cli/tests/testdata/test/no_check.out
Uncaught error from ./test/no_check.ts FAILED

 ERRORS 

./test/no_check.ts (uncaught error)
error: TypeError: Cannot read properties of undefined (reading 'fn')
Deno.test();
     ^
    at [WILDCARD]/test/no_check.ts:1:6
This error was not caught from a test and caused the test runner to fail on the referenced module.
It most likely originated from a dangling promise, event/timeout handler or top-level code.

 FAILURES 

./test/no_check.ts (uncaught error)

test result: FAILED. 0 passed; 1 failed; 0 ignored; 0 measured; 0 filtered out ([WILDCARD])

error: Test failed
